--- a/cardapio.html
+++ b/cardapio.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>PLa casa de Las Pizzas</title>
+        <title>La casa de Las Pizzas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
