--- a/web/index.html
+++ b/web/index.html
@@ -59,7 +59,7 @@ and open the template in the editor.
             <div class="topnav">
                 <a class="active" href="index.html">Home</a>
                 <a href="sobre.html">Sobre Nós</a>
-                <a href="">Cardápio</a>
+                <a href="cardapio.html">Cardápio</a>
                 <a href="">Notícias</a>
                 <a href="">Contato</a>
                 </div>
