--- a/cardapio.html
+++ b/cardapio.html
@@ -31,6 +31,11 @@ and open the template in the editor.
                 margin: auto;
                 
             }
+            p{
+              font-family: "Verdana", Geneva, sans-serif;
+                text-align: center; 
+                margin: auto;   
+            }
             /* Add a black background color to the top navigation */
 .topnav {
     background-color: #850D00;
@@ -50,7 +55,6 @@ and open the template in the editor.
     background-color: #470500;
     color: white;
 }
-
     #historia
     {
         float:left;
@@ -70,7 +74,7 @@ and open the template in the editor.
                 <a href="sobre.html">Sobre Nós</a>
                 <a href="cardapio.html">Cardápio</a>
                 <a href="">Notícias</a>
-                <a href="">Contato</a>
+                <a href="Contato.html">Contato</a>
             </div>
             <div id="barra"><img src="images/slide.jpg" width="100%"></div>
                 <h1>59 Anos de história</h1>
@@ -80,57 +84,53 @@ and open the template in the editor.
                     <table>
                         <tr>
                             <td>
-                                <img src="images/mussarela_jpg.jpg" width="200px" height="200px">
+                                <img src="images/mozzarella.jpeg">
                             </td>
                             <td>
-                                <p>Nossa <b>tradicional</b> pizza mussarela cnta com um toque de sofisticação que a coloca entre as 
-                                    mais saborosas pizzas do estado. Se você deseja a sofisticação aliada a mais perene tradição, escolha
-                                    a nossa pizza Mussarela</p>
-                            </td>
-                        </tr>
-                        <br>
-                        <tr>
-                            <td>
-                                <img src="images/calabreza.jpg" width="200px" height="200px">
-                            </td>
-                            <td>
-                                <h3>A nossa pizza de calabresa tem as seguintes características!!!!</h3>
-                                <br>
-                                <ol>
-                                    <li>A calabresa tem a melhor qualidade;</li>
-                                    <li>A cebola está sempre na medida, caso você não curta cebola, nós retiramos ela pra você;</li>
-                                    <li>A massa é fininha com farinha de excelente qualidade;</li>
-                                    <li><b>É DELICIOSA!</b></li>
-                                </ol>
-                                <p>Mais nada a declara sobre nossa calabresa.</p>
+                                <h3>Mozzarella</h3>
+                                <p>Nossa <b>tradicional</b> pizza de mozzarella conta com um toque de sofisticação que a coloca entre as 
+                                    mais saborosas pizzas do estado. Se você deseja sofisticação aliada a mais perene tradição, escolha
+                                    a nossa pizza de mozzarella</p>
                             </td>
                         </tr>
                         <br>
                         <tr>
                             <td>
-                                <img src="images/fgo_catupiry_jpg.jpg" width="200px" height="200px">
+                                <img src="images/calabresa.jpeg">
                             </td>
                             <td>
-                                <p>A melhor carne de frango somada ao verdadeiro catupiry mineiro, só pode resultar 
-                                    numa pizza com sabor excepcional!!!!</p>
-                            </td>
-                        </tr>
-                        <br>
-                        <tr>
-                            <td>
-                                <img src="images/doce_jpg.jpg" width="200px" height="200px">
-                            </td>
-                            <td>
-                                <p>Também temos a melhor pizza doce da cidade.<b>Confira!!!!</b></p>
+                                <h3>Calabresa</h3>
+                                <p>Utilizamos uma linguiça calabresa de primeira qualidade, em uma massa bem fina com cebolas cortadas na medida certa.</p>
                             </td>
                         </tr>
                         <br>
                         <tr>
                             <td>
-                                <img src="images/rodizio.jpg" width="200px" height="200px">
+                                <img src="images/frango.jpg">
                             </td>
                             <td>
-                                <p>Gostou de todas as pizzas do nosso cardápio? Saboreie todas elas então!!
+                                <h3>Frango com Catupiry</h3>
+                                <p>A melhor carne de frango com o tempero secreto da casa, somada ao verdadeiro catupiry mineiro, só pode resultar 
+                                    numa pizza de sabor excepcional!</p>
+                            </td>
+                        </tr>
+                        <br>
+                        <tr>
+                            <td>
+                                <img src="images/doce.jpg">
+                            </td>
+                            <td>
+                                <h3>Pizzas Doces</h3>
+                                <p>Alternamos sempre nossas opções de Pizzas doces, utilizando dos ingredientes disponíveis na temporada. Consulte os sabores disponíveis</p>
+                            </td>
+                        </tr>
+                        <br>
+                        <tr>
+                            <td>
+
+                            <td colspan="2">
+                                <p>
+                                <h3> Ficou indeciso em qual o sabor escolher? </h3>
                                     Confira nosso <b>rodízio</b>!!!!!</p>
                             </td>
                         </tr>
